<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info" />

</menu>
