<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.uta.leanmed.activities.InventoryDetailActivity"
    tools:showIn="@layout/activity_inventory_detail">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/medicine_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_margin="4dp"
            android:elevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/medicine_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="@string/medicine_details"
                    android:textSize="15sp" />

                    <TextView
                        android:id="@+id/trade_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/trade_name"/>
                    <TextView
                        android:id="@+id/gen_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/generic_name"
                        />
                    <TextView
                        android:id="@+id/medicineType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/medicine_type"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/dosage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/dosage"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/inventory_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_margin="4dp"
            android:elevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/inventory_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="@string/inventory_details"
                    android:textSize="15sp" />

                    <TextView
                        android:id="@+id/inventory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/inventory"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/expiryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/expiry"/>
                    <TextView
                        android:id="@+id/idBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/box_id"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/zone_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:elevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/medicine"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/zone_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorWhite"
                    android:text="@string/zone_details"
                    android:textSize="15sp" />

                    <TextView
                        android:id="@+id/zoneId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/zone_id"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/zoneName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:text="@string/zone_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/zoneEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/zone_email"
                        android:textSize="14sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
