<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="8dp">
    <ImageView
        android:id="@+id/dailog_pass_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    <TextView
        android:id="@+id/title_dailog_zone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/prompt_select_password"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:textSize="18sp"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/confirmPassword"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_confirm_password"
            android:textSize="18sp"
            />
    <Button
            android:id="@+id/buttonSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:theme="@style/BtnStyle"
            android:layout_marginTop="8dp"
            android:text="@string/update" />

</LinearLayout>