<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:elevation="4dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/user_layout"
            android:orientation="vertical">
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="@string/user_name_identity"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/user_type"
                />
            <TextView
                android:id="@+id/zone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/available_at"/>
            </LinearLayout>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/prompt_email"
                />
            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:text="@string/prompt_contact"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"
                android:text="@string/status"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>